infrastructure/trivy-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivy-ui
  namespace: trivy-ui
spec:
  selector:
    app: trivy-ui
  ports:
    - name: http
      port: 80
      targetPort: 5000
