infrastructure/trivy-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivy-ui-ingress
  namespace: trivy-ui
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - trivy.local.sifft.io
      secretName: wildcard-local-sifft-io-tls
  rules:
    - host: trivy.local.sifft.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trivy-ui
                port:
                  number: 80
